@@ -34,6 +34,7 @@ RELEASE  VERSION/DATE TO BE FILLED IN LATER
     - Add the textfile tool to the default tool list
     - Fix syntax on is/is not clauses: should not use with a literal
     - Properly retrieve exit code when catching SystemExit
+    - scons-time now uses context managers around file opens
 
   From Bernhard M. Wiedemann:
     - Do not store build host+user name if reproducible builds are wanted
